--- a/my-app/src/Languages.css
+++ b/my-app/src/Languages.css
@@ -1,51 +1,37 @@
+#skills h2 {
+  font-size: 4em;
+  color: brown;
+}
+.front {
+  text-align: left;
+  margin-left: 5%;
+}
 .FrontEnd {
-  position: relative;
-  margin-bottom: 10%;
-  z-index: 10;
+  margin: 5% 0%;
 }
-.front h2 {
-  z-index: 10;
-}
+
 .FrontEnd ul {
   display: flex;
-  align-items: stretch;
-  justify-content: space-between;
+  justify-content: space-evenly;
   margin: 5% 2rem;
 }
 .FrontEnd h2 {
-  position: relative;
-  font-size: 4em;
-  z-index: 10;
-  margin-bottom: 1em;
+  font-size: 3em;
 }
 .FrontEnd h3 {
   font-size: 3em;
-  z-index: 10;
 }
 .FrontEnd li {
-  margin-left: 5%;
-  margin-right: 5%;
-  font-size: 1.5rem;
-  z-index: 10;
+  font-size: 2em;
 }
 
-.BackEnd {
-  position: relative;
-}
 .BackEnd ul {
-  margin: 5% 5%;
   display: flex;
-  align-items: stretch;
-  justify-content: space-between;
+  justify-content: space-evenly;
   margin: 5% 2rem;
 }
 .BackEnd li {
-  position: relative;
-  margin-left: 5%;
-  margin-right: 5%;
-  font-size: 1.5rem;
-  text-align: left;
-  z-index: 10;
+  font-size: 2em;
 }
 
 .BackEnd h2 {
@@ -53,47 +39,14 @@
   margin-bottom: 1em;
 }
 .BackEnd h3 {
-  position: relative;
-  z-index: 10;
+  margin-left: 5%;
+  text-align: left;
   font-size: 3em;
 }
 
-.designs-10 {
-  position: absolute;
-  transform: rotate(70deg);
-  top: 0;
-  border: 2px solid black;
-  width: 25vw;
-  height: 25vw;
-  z-index: -1;
-  box-shadow: 0 0 10px rgb(168, 168, 168);
-  overflow-x: hidden;
-}
-.designs-11 {
-  position: absolute;
-  transform: rotate(140deg);
-  top: 50%;
-  right: 0;
-  border: 2px solid black;
-  width: 40vw;
-  height: 40vh;
-  border-radius: 10px;
-  z-index: -1;
-  overflow-x: hidden;
-  box-shadow: 0 0 10px rgb(168, 168, 168);
-}
-.designs-12 {
-  position: absolute;
-  transform: rotate(140deg);
-  border: 2px solid black;
-  width: 200px;
-  height: 200px;
-  left: 20%;
-  bottom: 0;
-  border-radius: 50%;
-  overflow-x: hidden;
-  z-index: 0;
-  box-shadow: 0 0 10px rgb(168, 168, 168);
+.coding-icon {
+  font-size: 0.8em;
+  margin-left: 1px;
 }
 
 @media only screen and (max-width: 390px) {
